[package]
name = "bevy_bundled_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.41", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"
heck = "0.4.1"
bevy = "0.12.1"
